<resources>
    <string name="app_name">Jelzi</string>
    <string name="SignIn">Sign in</string>
    <string name="SignUp">Sign up</string>
    <string name="or">or</string>
    <string name="username">USER</string>
    <string name="usernameDesc">Username</string>
    <string name="password">PASSWORD</string>
    <string name="passwordDesc">Password</string>
    <string name="email">EMAIL</string>
    <string name="emailDesc">Email</string>
    <string name="alreadyMember">I already have an account</string>
    <string name="notMember">Don\'t have an account yet?</string>
    <string name="logIn">Log in</string>
    <string name="shortpasserror">Password Error</string>
    <string name="passerror">The password must be at least 6 characters long</string>
    <string name="invalidemail">Email error</string>
    <string name="emailerror">Invalid email</string>
    <string name="invalidusername">Invalid Username</string>
    <string name="usernameerror">It cannot contain spaces and must be between 3 and 10
        characters from A to Z or numbers</string>
    <string name="nodata">Empty fields</string>
    <string name="nodataForgotPass">Enter your email to be able to change the password</string>
    <string name="nodataerror">Fill all the fields to be able to register</string>
    <string name="errorregistration">Register failed</string>
    <string name="registrationerror">It is possible that there is a user with that email</string>
    <string name="connectionlost">Please check that you have an internet connection</string>
    <string name="nodataloginerror">Put your credentials to enter</string>
    <string name="errorlogin">Failed to login</string>
    <string name="loginerror">Make sure the data entered is correct</string>
    <string name="forgotpass">Have you forgotten your password?</string>
    <string name="resetpass">Do you want to change your password?</string>
    <string name="resetpassdesc">Write your email and receive a link to change it</string>
    <string name="change">Change</string>
    <string name="back">Back</string>
    <string name="emailsent">An email has been sent to you to change your password</string>
    <string name="emailsenterror">An error occurred while sending the mail. Make sure the data is correct</string>
    <string name="searchFood">Search food</string>
    <string name="prot">Proteins</string>
    <string name="carbh">Carbohydrates</string>
    <string name="cals">Calories</string>
    <string name="grasa">Fat</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome,</string>
    <string name="welcomeExplanation">You don\'t have the corporal registry!\n\n Click next to set your corporal values</string>
    <string name="genderText">Select your gender</string>
    <string name="menButton">Man</string>
    <string name="womenButton">Woman</string>
    <string name="loading">Loading</string>
    <string name="ageText">Select your age</string>
    <string name="heightText">Enter your height in cm</string>
    <string name="weightText">Enter your weight in Kg</string>
    <string name="activityText">Select your activity level</string>
    <string name="lowActivity">Light exercise \n (1-3 days per week)</string>
    <string name="midActivity">Moderate Exercise \n (3-5 days per week)</string>
    <string name="strongActivity">Strong Exercise \n (6 days a week)</string>
    <string name="profActivity">Professional or \n extreme exercise</string>
    <string name="objectiveTextt">Select your objective</string>
    <string name="lossWeight">Lose weight</string>
    <string name="maintenanceWeight">Keep weight</string>
    <string name="gainWeight">Gain weight</string>
    <string name="noneActivity">Few if any exercise</string>
    <string name="objective">Objective</string>
    <string name="separator">/</string>
    <string name="morning">Morning</string>
    <string name="midday">Midday</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="searchHint">Search food</string>
    <string name="profileUsername">User</string>
    <string name="profileAge">Age</string>
    <string name="profileActivity">Activity</string>
    <string name="profileHeight">Height</string>
    <string name="profileWeight">Weight</string>
    <string name="profileGender">Gender</string>
    <string name="profileObjective">Objective</string>
    <string name="profileHighProtein">Diet type</string>
    <string name="logout">Log out</string>
    <string name="removeTracing">Delete tracing</string>
    <string name="removeTracingAccept">Delete</string>
    <string name="removeTracingMessage">Are you sure you want to delete your tracing?</string>
    <string name="highProteinDiet">High protein diet</string>
    <string name="normalDiet">Normal diet</string>
    <string name="continuar">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noData">0</string>
    <string name="connectionlostandlogout">Session closed due to no internet connection</string>
    <string name="serving">Serving size (g):</string>
    <string name="addFood">Add food</string>
    <string name="servingItem">Serving</string>
</resources>