<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/womenIV"
    style="@style/darkBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        style="@style/FirstCalcTittles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/genderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/womenButton"
        style="@style/FirstCalcTextSelects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/womenButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/womenIcon" />

    <TextView
        android:id="@+id/menButton"
        style="@style/FirstCalcTextSelects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/menButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/womenButton"
        app:layout_constraintTop_toBottomOf="@+id/menIcon" />

    <ImageView
        android:id="@+id/womenIcon"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        app:layout_constraintBottom_toTopOf="@+id/womenButton"
        app:layout_constraintEnd_toEndOf="@+id/womenButton"
        app:layout_constraintStart_toStartOf="@+id/womenButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_female" />

    <ImageView
        android:id="@+id/menIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/menButton"
        app:layout_constraintEnd_toEndOf="@+id/menButton"
        app:layout_constraintStart_toStartOf="@+id/menButton"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_male" />
</androidx.constraintlayout.widget.ConstraintLayout>